--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
     </section>
     <footer>
-        <p>Acme Web design. Copyright &copy; 2018</p>
+        <p>Garmash Web design. Copyright &copy; 2018</p>
     </footer>
 
 
