--- a/services.html
+++ b/services.html
@@ -112,7 +112,7 @@
 
     </section>
     <footer>
-        <p>Acme Web design. Copyright &copy; 2018</p>
+        <p>Garmash Web design. Copyright &copy; 2018</p>
     </footer>
 </body>
 
